# quadit

./: .env  .gitignore  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  README.md  build.sh  codecov.yml  publish.sh  service.Dockerfile  start.sh  ubi.Dockerfile  wolfi.Dockerfile
.github/: dependabot.yml
.github/workflows/: build.yml  release-binary-assets.yml  release-container.yaml  release.yml
deploy/: quadit.container
samples/: config.yaml  sleep.container
samples/helloworld/: hello.container
src/: cli.rs  config_commands.rs  config_git.rs  config_quadit.rs  config_reload.rs  file_manager.rs  git_config.rs  git_manager.rs  lib.rs  main.rs  quadit_config.rs  quadit_manager.rs  reload_manager.rs  service_manager.rs
tests/: file_manager.rs  file_manager_standalone.rs  integration_test.rs
