[package]
name = "quadit"
version = "0.1.5"
description = "A gitops tool to deploy systemd managed containers on linux using quadlets"
authors = ["Anton Whalley <antonwhalley@yahoo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubiquitous-factory/quadit"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "*.md"]

[dependencies]
anyhow = "1.0.95"
quaditsync = "1.0.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yaml = "0.9.34"
tokio-cron-scheduler = "0.13.0"
uuid = "1.12.1"
tokio = { version = "1.43.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
chrono = "0.4.39"
tracing = { version = "0.1.41", features = ["log"] }
tracing-subscriber = { version = "0.3.19", features = [
    "registry",
    "env-filter",
] }
url = "2.5.4"
reqwest = "0.12.12"
dirs = "6.0.0"


[[bin]]
path = "src/main.rs"
name = "quadit"

[profile.release]
lto = true

[dev-dependencies]
claims = "0.8.0"
time = "0.3.37"
timer = "0.2.0"
