[package]
name = "quadit"
version = "1.0.0"
description = "A gitops tool to deploy systemd managed containers on linux using quadlets"
authors = ["Anton Whalley <antonwhalley@yahoo.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/ubiquitous-factory/quadit"
edition = "2021"
include = ["src/**/*", "LICENSE-*", "*.md"]

[dependencies]
anyhow = "1.0.100"
quaditsync = "1.0.2"
serde = { version = "1.0.228", features = ["derive"] }
serde_yaml = "0.9.34"
tokio-cron-scheduler = "0.15.1"
uuid = "1.20.0"
tokio = { version = "1.49.0", features = ["macros", "rt-multi-thread"] }
dotenvy = "0.15.7"
chrono = "0.4.42"
tracing = { version = "0.1.44", features = ["log"] }
tracing-subscriber = { version = "0.3.22", features = [
    "registry",
    "env-filter",
] }
url = "2.5.7"
users = "0.11"
reqwest = "0.13.1"
dirs = "6.0.0"


[[bin]]
path = "src/main.rs"
name = "quadit"

[profile.release]
lto = true

[dev-dependencies]
claims = "0.8.0"
time = "0.3.44"
timer = "0.2.0"
